# inductiveclaw

./: .gitignore  .gitmodules  CLAUDE.md  INDUCTIVECLAW_BUILD_PROMPT.md  README.md  pyproject.toml
docs/: architecture.md  auth.md  cli.md  decisions.md  for-human.md  iteration-loop.md  providers.md  sdk-integration.md  tools.md  web.md
docs/archive/: GEMINI_INTEG_PROMPT.md  README.md  web-design-references.md
docs/feature/: OPENAI_INTEG_PROMPT.md
inductiveclaw/: __init__.py  __main__.py  agent.py  agent_worker.py  auth.py  browser_eval.py  budget.py  config.py  display.py  display_parallel.py  git_helpers.py  interactive.py  parallel.py  server.py  sessions.py  setup.py  smoke.py  tools.py  tools_core.py
inductiveclaw/backends/: __init__.py  base.py  claude.py  costs.py  gemini.py  openai.py  sandbox.py  tool_executor.py
inductiveclaw/dashboard/: __init__.py  bridge.py  frontend.py  state.py  steering.py  ws_server.py
inductiveclaw/prompts/: __init__.py  approach_hint.md  browser_eval_trigger.md  eval_trigger.md  idea_proposal.md  interactive.md  iteration.py  iteration_first.md  iteration_next.md  screenshot_trigger.md  system.md  system.py
inductiveclaw/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
tests/: test_agent_worker.py  test_backends.py  test_browser_eval.py  test_budget.py  test_costs.py  test_dashboard.py  test_gemini_backend.py  test_openai_backend.py  test_parallel.py  test_sandbox.py  test_server.py  test_sessions.py  test_tool_executor.py  test_tools_core.py
